ft4 - mobile first : Création section de présentation (photo + texte) + correction alignement logo assoc

--- a/style.css
+++ b/style.css
@@ -29,3 +29,29 @@ nav{
   font-size: 0.80rem;
 }
 
+/* style de la section :presentation de l'association */
+
+.presentation-title{
+  font-size: 1rem;
+}
+
+.presentation-title-image{
+  height: 1rem;
+}
+
+.etang-photo{
+  max-width:400px;
+}
+
+
+.presentation-text{
+  font-size: 0.75rem;
+  text-align: justify;
+}
+
+.presentation-text::first-letter{
+  color: green;
+  font-weight: 500;
+  font-size: 1.2rem;
+  font-family: cursive;
+}
